--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "2.7"
 
 install:
+  - pip install tornado
   - pip install python-coveralls
   - pip install coverage
   - pip install httpretty
